一些细节优化